Přidán návrh člena Tadeáš Kachyňa

--- a/Specifikace zadání a uživatelských požadavků.tex
+++ b/Specifikace zadání a uživatelských požadavků.tex
@@ -47,6 +47,15 @@ Neintuitivnost samotné aplikace. Chybí kategorie pro položky podle kterých b
 Znovuvytvoření aplikace s~novým, modernějším designem. Přidání chybějících funkcionalit a~implementace stávajících.
 
 \subsection{Tadeáš Kachyňa}
+\subsubsection{Způsob hledání tématu}
+Oslovení někoho z mých přátel nebo členů rodiny, zda-li používají nějakou aplikaci u které vědí o nějakých funkčních či grafických nedostatcích. Následně byla mnou jedna aplikace vybrána. 
+\subsubsection{Způsob zkoumání uživatele a jeho potřeby}
+Navštívení vybraného uživatele a sledování jeho každodenní práce s aplikací (konkrétně s aplikací Fitbit App, která slouží pro detailnější zobrazení statistik naměřených wearable zařízením, které je s touto aplikací spárováno pomocí bluetooth). Bylo vypozorováno, že uživatel není zcela spokojen s aktuální aplikací, má několik nedostatků, které by bylo potřeba vyřešit.
+\subsubsection{Identifikované potíže}
+Používání aplikace je v některých ohledech docela zdlouhavé a neintuitivní. Při vyhledávání aplikací či ciferníků chybí více filtrů podle kterých by si mohl uživatel snadněji vybrat. Při sledování záznamu svého spánku, srdečního tepu atd. by byl potřeba slider, aby uživatel nemusel zdlouhavě naklikávat jednotlivé naměřené časové úseky.  
+\subsubsection{Návrh nového řešení}
+V případě této aplikace by byl potřeba redesign a přidání některých funkcí. 
+
 \subsection{Lukáš Neupauer}
 
 
