Update Specifikace zadání a uživatelských požadavků.tex

--- a/Specifikace zadání a uživatelských požadavků.tex
+++ b/Specifikace zadání a uživatelských požadavků.tex
@@ -57,6 +57,17 @@ Používání aplikace je v některých ohledech docela zdlouhavé a neintuitivn
 V případě této aplikace by byl potřeba redesign a přidání některých funkcí. 
 
 \subsection{Lukáš Neupauer}
+\subsubsection{Spôsob hľadania témy}
+Pozorovanie okolia a hľadanie zpôsobu zprehľadnenia a väčšieho dosahu informácií. Skúmanie možnosti pridania funkcií do sociálnych médií.
+
+\subsubsection{Spôsob skúmania užívateľa a jepo potreby}
+Oslovenie potencionálnych užívateľov a zisťovanie nedostatkov a možností vylepšení aplikácií v ich každodennom používaní. Najčastejšie Discord, Facebook, WhatsApp a Instagram. 
+
+\subsubsection{Identifikované nedostatky}
+Neprehľadnosť alebo úplne absencia udalostí v okolí. Užívateľ si pri Facebooku nemôže filtrovať udolosti podľa kategórií a väčšina užívateľ túto vymoženosť ani nevužíva pre komplikovanosť platformy. Pri ostaných táto platformách bola pozorovaná absencia tejto funkcionaloty. 
+
+\subsubsection{Návrh nového riešenia}
+Vytvorenie jednoduchej platformy s udalosťami v okolí, s možnosťou zoradienia do kategórií, funciou zobrazenia udalosti iba určitým ľudom (napr. system prateľov) a ďalšími funkciami, ktorá bude slúžiť výužívaná, iba na zvýšenie povedomia a sprehľadnenie udalostí v okolí. 
 
 
 
