Updated tex/pdf file with solution proposal

--- a/Specifikace zadání a uživatelských požadavků.tex
+++ b/Specifikace zadání a uživatelských požadavků.tex
@@ -20,7 +20,7 @@
         \vspace{\stretch{0.382}}
         
         \LARGE{Tvorba uživatelských rozhraní\\}
-        \Huge{Semestrální projekt}
+        \Huge{Specifikace zadání a uživatelských požadavků}
         
         \vspace{\stretch{0.618}}
     \end{center}
@@ -32,41 +32,54 @@
 \tableofcontents
 \newpage
 
-\section{Analýzy a návrhy členů týmu}
 
+
+
+\section{Analýzy a návrhy členů týmu}
 \subsection{Lukáš Hais}
-\subsubsection{Způsob hledání tématu}
+	\subsubsection{Způsob hledání tématu}
 Obepisování blízkých přátel s~dotazem, zda nemají nějakou aplikaci u~které by věděli o~nějakých funkčních/grafických nedostatcích. Následně byla 1~
 aplikace vybrána dle osobních preferencí.
-\subsubsection{Způsob zkoumání uživatele a jeho potřeby}
+
+	\subsubsection{Způsob zkoumání uživatele a jeho potřeby}
 Sraz s~uživatelem a~sledování jeho využívání aplikace, doptávání~se na~očekávanou funkcionalitu.\\
 Uživatel požaduje aplikaci, která mu umožní zaznamenávat data z~různých oblastí (počet uběhnutých kilometrů, objem vypíte vody za den, hodiny strávené učením,  \ldots) a následné zobrazení grafů podle časového období, filtrované pomocí kategorií spravovaných uživatelem.
-\subsubsection{Identifikované potíže}
+
+	\subsubsection{Identifikované potíže}
 Neintuitivnost samotné aplikace. Chybí kategorie pro položky podle kterých by bylo možné filtrovat. Nepřehlednost zobrazených grafů.
-\subsubsection{Návrh nového řešení}
+
+	\subsubsection{Návrh nového řešení}
 Znovuvytvoření aplikace s~novým, modernějším designem. Přidání chybějících funkcionalit a~implementace stávajících.
 
+
+
 \subsection{Tadeáš Kachyňa}
-\subsubsection{Způsob hledání tématu}
+	\subsubsection{Způsob hledání tématu}
 Oslovení někoho z mých přátel nebo členů rodiny, zda-li používají nějakou aplikaci u které vědí o nějakých funkčních či grafických nedostatcích. Následně byla mnou jedna aplikace vybrána. 
-\subsubsection{Způsob zkoumání uživatele a jeho potřeby}
+
+	\subsubsection{Způsob zkoumání uživatele a jeho potřeby}
 Navštívení vybraného uživatele a sledování jeho každodenní práce s aplikací (konkrétně s aplikací Fitbit App, která slouží pro detailnější zobrazení statistik naměřených wearable zařízením, které je s touto aplikací spárováno pomocí bluetooth). Bylo vypozorováno, že uživatel není zcela spokojen s aktuální aplikací, má několik nedostatků, které by bylo potřeba vyřešit.
-\subsubsection{Identifikované potíže}
+
+	\subsubsection{Identifikované potíže}
 Používání aplikace je v některých ohledech docela zdlouhavé a neintuitivní. Při vyhledávání aplikací či ciferníků chybí více filtrů podle kterých by si mohl uživatel snadněji vybrat. Při sledování záznamu svého spánku, srdečního tepu atd. by byl potřeba slider, aby uživatel nemusel zdlouhavě naklikávat jednotlivé naměřené časové úseky.  
-\subsubsection{Návrh nového řešení}
+
+	\subsubsection{Návrh nového řešení}
 V případě této aplikace by byl potřeba redesign a přidání některých funkcí. 
 
+
+
+
 \subsection{Lukáš Neupauer}
-\subsubsection{Spôsob hľadania témy}
+	\subsubsection{Spôsob hľadania témy}
 Pozorovanie okolia a hľadanie zpôsobu zprehľadnenia a väčšieho dosahu informácií. Skúmanie možnosti pridania funkcií do sociálnych médií.
 
-\subsubsection{Spôsob skúmania užívateľa a jepo potreby}
+	\subsubsection{Spôsob skúmania užívateľa a jeho potreby}
 Oslovenie potencionálnych užívateľov a zisťovanie nedostatkov a možností vylepšení aplikácií v ich každodennom používaní. Najčastejšie Discord, Facebook, WhatsApp a Instagram. 
 
-\subsubsection{Identifikované nedostatky}
+	\subsubsection{Identifikované nedostatky}
 Neprehľadnosť alebo úplne absencia udalostí v okolí. Užívateľ si pri Facebooku nemôže filtrovať udolosti podľa kategórií a väčšina užívateľ túto vymoženosť ani nevužíva pre komplikovanosť platformy. Pri ostaných táto platformách bola pozorovaná absencia tejto funkcionaloty. 
 
-\subsubsection{Návrh nového riešenia}
+	\subsubsection{Návrh nového riešenia}
 Vytvorenie jednoduchej platformy s udalosťami v okolí, s možnosťou zoradienia do kategórií, funciou zobrazenia udalosti iba určitým ľudom (napr. system prateľov) a ďalšími funkciami, ktorá bude slúžiť výužívaná, iba na zvýšenie povedomia a sprehľadnenie udalostí v okolí. 
 
 
@@ -78,12 +91,21 @@ Vytvorenie jednoduchej platformy s udalosťami v okolí, s možnosťou zoradieni
 \section{Důvod vybrání zvoleného tématu}
 Po společném schůzi se tým demokraticky rozhodl pro volbu aplikace od \emph{Lukáše Haise.} Důvodem k~tomuto kroku bylo celkové zalíbení členů pro daný projekt.
 
+
+
+
 \section{Analýza uživatele}
 Uživatel pracuje jakožto číšník a ve volném čase sportuje. Má rád data a~výstupy z~nich, které mu mohou dát nějaký retrospektivní pohled na různé části jeho života. 
+
+
+
 
 \section{Potřeby uživatele}
 Uživatel chce využívat aplikaci pro zaznamenávání dat a~následné retrospektivní vyhodnocování zaznamenaných dat.\\
 Může jít např. o~sledování četnosti výskytu zlozvyků, udržování nastavených pravidel (např. denní příjem vody), sledování zlepšení fyzických výkonů, \uv{RPG statistiky} při dlouhodobém využívaní aplikace a~zaznamenávání velkého množství dat.
+
+
+
 
 \section{Popis současného řešení}
 Uživatel využívá aplikaci \emph{Track and Graph} [obrázek \ref{fig:track-app}] (ke stažení zde: \url{https://f-droid.org/en/packages/com.samco.trackandgraph/}).
@@ -98,14 +120,65 @@ Uživatel využívá aplikaci \emph{Track and Graph} [obrázek \ref{fig:track-ap
 
 \section{Návrh zadání}
 V našem případě půjde o~znovuvytvoření již existující aplikace, modernizaci designu a~přidání chybějících funkcionalit.
-\subsection{Funkcionalita}
-Přidání kategorií pro lepší filtraci při vytváření grafů. Kategorie budou mít vlastní měrné jednotky (např. litry pro vypité pití) a další volitelné parametry.\\
+	\subsection{Funkcionalita}
+Přidání kategorií pro lepší filtraci při vytváření grafů. Kategorie budou mít vlastní měrné jednotky (např. litry pro vypité pití).\\
 Toto by mělo směrovat k~lepším výstupům samotné aplikace a~tudíž k většímu zájmu o~používání aplikace.
-\subsection{Grafika}
-Modernizace stávající grafiky. Vytvoření menu ve kterém lze přidávat položky do databáze, či zobrazování grafů (které mohou být členěny do skupin).
+	\subsection{Grafika}
+Modernizace stávající grafiky. Vytvoření menu ve kterém lze upravovat/přidávat položky do databáze, či zobrazovat grafy.
+
+
 
 
 \section{Návrh řešení}
-TO-DO
+	\subsection{Datový model}
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.43]{database}
+	\caption{Předběžný návrh datového modelu}
+	\label{fig:database}
+\end{figure}
+
+	\subsection{API}
+API v~našem případě nebude komunikovat s~databází, která by byla umístěna na externím serveru, ale naopak bude součástí aplikace jakožto SQLite soubor (není potřeba uchovávat data mimo aplikaci).
+API bude podporovat CRUD metody nad většinou entit v~databázi (viz Obrázek~\ref{fig:database}) kromě \texttt{Units}, které již jsou předvyplněny základními jednotkami.
+
+	\subsubsection{Create}
+\begin{itemize}
+	\item \texttt{Category::create()} - vytvoří novou kategorii se~zadaným jménem a~preferovanými jednotkami (např.: kategorie Alkohol s~jednotkami v~litrech)
+	\item \texttt{Item::create()} - vytvoří nový pojmenovaný objekt ve~specifikované kategorii se zadaným obsahem v~preferovaných jednotkách (např.: Pivo 500ml v~kategorii Alkohol)
+	\item \texttt{ItemRecord::create()} - vytvoří nový záznam o~objektu v~kategorii a~jeho četnosti (lze přidávat již existující objekty a~jejich počet [3x Pivo 500ml] nebo neexistující objekt kde zadáváme samotné jednotky [50km do kategorie Běhání])
+	\item \texttt{Graph::create()} - vytvoří nový pojmenovaný graf pro zadanou kategorii, nastaví preferovaný typ grafu (linie, obdelníkový, kruhový), období pro zobrazení (denní, týdenní, měsíční a~ nebo fixní datum od~do)
+	\item \texttt{GraphItem::create()} - vytvoří záznam o~preferovaných objektech z~kategorie, které se mají zobrazovat v~grafu
+\end{itemize}
+
+	\subsubsection{Read}
+\begin{itemize}
+	\item \texttt{Category::Read()} - zobrazí informace o~existující kategorii
+	\item \texttt{Category::ReadAll()} - zobrazí všechny existující kategorie
+	\item \texttt{Item::Read()} - zobrazí informace o~existujícím objektu v~kategorii
+	\item \texttt{Item::ReadAll()} - zobrazí všechny existující objekty v~kategorii
+	\item \texttt{ItemRecord::Read()} - zobrazí informace o~existujícím záznamu objektu
+	\item \texttt{ItemRecord::ReadAll()} - zobrazí všechny záznamy o~přidaných objektech
+	\item \texttt{Graph::Read()} - zobrazí informace o~existujícím grafu
+	\item \texttt{Graph::ReadAll()} - zobrazí všechny existující grafy
+	\item \texttt{GraphItem::Read()} - zobrazí preferované objekty pro zadaný graf
+\end{itemize}
+
+	\subsubsection{Update}
+\begin{itemize}
+	\item \texttt{Category::Update()} - upraví jméno nebo preferované jednotky
+	\item \texttt{Item::Update()} - upraví jméno nebo hodnotu u preferovaných jednotek
+	\item \texttt{ItemRecord::Update()} - upraví záznam o~objektu v~kategorii
+	\item \texttt{Graph::Update()} - upraví nastavení grafu
+\end{itemize}
+
+	\subsubsection{Delete}
+\begin{itemize}
+	\item \texttt{Category::Delete()} - odstraní kategorii a~všechny objekty v~ní
+	\item \texttt{Item::Delete()} - odstraní objekt z~kategorie
+	\item \texttt{ItemRecord::Delete()} - odstraní záznam o~objektu z~kategoire
+	\item \texttt{Graph::Delete()} - odstraní graf včetně jeho nastavení
+	\item \texttt{GraphItem::Delete()} - odstraní preferovaný objekt pro zadaný graf
+\end{itemize}
 
 \end{document}
