updated pdf/tex file with images of application mockup

--- a/Specifikace zadání a uživatelských požadavků.tex
+++ b/Specifikace zadání a uživatelských požadavků.tex
@@ -178,7 +178,71 @@ API bude podporovat CRUD metody nad většinou entit v~databázi (viz Obrázek~\
 	\item \texttt{Item::Delete()} - odstraní objekt z~kategorie
 	\item \texttt{ItemRecord::Delete()} - odstraní záznam o~objektu z~kategoire
 	\item \texttt{Graph::Delete()} - odstraní graf včetně jeho nastavení
-	\item \texttt{GraphItem::Delete()} - odstraní preferovaný objekt pro zadaný graf
+	\item \texttt{GraphItem::Delete()} - odstraní preferovaný objekt pro zadaný  graf
 \end{itemize}
+
+	\subsection{Mockup aplikace}
+\begin{figure}[ht]
+	\centering
+	\includegraphics[scale=0.43]{menu_screen}
+	\caption{Menu aplikace}
+	\label{fig:menu_screen}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[scale=0.43]{categories_view}
+	\caption{Obrazovka s kategoriemi}
+	\label{fig:categories_view}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[scale=0.43]{add_category}
+	\caption{Přidávání kategorie}
+	\label{fig:add_category}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[scale=0.43]{category_view}
+	\caption{Přehled objektů uvnitř kategorie}
+	\label{fig:category_view}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[scale=0.43]{add_item}
+	\caption{Přidávání objektu do kategorie}
+	\label{fig:add_item}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[scale=0.43]{add_record}
+	\caption{Přidávání záznamu do databáze}
+	\label{fig:add_record}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[scale=0.43]{manage_graphs}
+	\caption{Přehled grafů}
+	\label{fig:manage_graphs}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[scale=0.43]{add_graph}
+	\caption{Přidávání nastavení grafu}
+	\label{fig:add_graph}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[scale=0.43]{manage_records}
+	\caption{Správa záznamů v databázi}
+	\label{fig:manage_records}
+\end{figure}
 
 \end{document}
